objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>CRM Support Process</fullName>
        <description>Support process for CRM</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>DSH_CRM</fullName>
        <description>Default Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>arcuscrm__Arcus CRM Default</fullName>
        <description>The default support process for all Arcus CRM case types.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Case_Reported_By__c</fullName>
        <label>Case Reported By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SODIT</fullName>
                </value>
                <value>
                    <fullName>Members</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Days_to_complete__c</fullName>
        <description>The number of days it took to complete (close) the case.</description>
        <formula>IF(  IsClosed  , ClosedDate -  CreatedDate , NULL)</formula>
        <inlineHelpText>The number of days it took to complete (close) the case.</inlineHelpText>
        <label>Days to complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Incoming_Address__c</fullName>
        <formula>Source:EmailMessage.ToAddress</formula>
        <label>Email Incoming Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FHDC_Priority_Coloured__c</fullName>
        <formula>IMAGE(
CASE( Priority,
"Low", "/img/samples/flag_green.gif",
"Medium", "/img/samples/flag_yellow.gif",
"High", "/img/samples/flag_red.gif",
"/s.gif"),
"Priority Flag")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FHDC_Reported_Location__c</fullName>
        <description>The latitude and longitude of the report.</description>
        <inlineHelpText>The latitude and longitude of the report.</inlineHelpText>
        <label>Reported Location OLD</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>FHDC_System__c</fullName>
        <description>Business system support call logging system name</description>
        <inlineHelpText>Business system support call logging system name</inlineHelpText>
        <label>System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aim/Cash Receipting</fullName>
                </value>
                <value>
                    <fullName>Allpay</fullName>
                </value>
                <value>
                    <fullName>Civica</fullName>
                </value>
                <value>
                    <fullName>Epayments</fullName>
                </value>
                <value>
                    <fullName>I_world_revs</fullName>
                    <label>I-World Revs</label>
                </value>
                <value>
                    <fullName>I_World_Bens</fullName>
                    <label>I-World Bens</label>
                </value>
                <value>
                    <fullName>Locata</fullName>
                </value>
                <value>
                    <fullName>M3</fullName>
                </value>
                <value>
                    <fullName>Salesforce Built Environment</fullName>
                </value>
                <value>
                    <fullName>Salesforce Reg Services</fullName>
                </value>
                <value>
                    <fullName>TLC (Land Charges)</fullName>
                </value>
                <value>
                    <fullName>Uniform (Planning/Building Control)</fullName>
                </value>
                <value>
                    <fullName>Salesforce CRM</fullName>
                </value>
                <value>
                    <fullName>Salesforce Staff Hub</fullName>
                </value>
                <value>
                    <fullName>My Account</fullName>
                </value>
                <value>
                    <fullName>Public Access</fullName>
                </value>
                <value>
                    <fullName>DWP/ATLAS/UC</fullName>
                </value>
                <value>
                    <fullName>Baccas</fullName>
                </value>
                <value>
                    <fullName>Self Serve Kiosk/Scanners</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <isActive>false</isActive>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Northgate CRM/Self Serve</fullName>
                    <isActive>false</isActive>
                    <label>Northgate CRM/Self Serve</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Case_Closed__c</fullName>
        <formula>If(( IsClosed = TRUE), "Closed", "Open" )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Case Closed?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_the_Case_owned_by_a_Queue__c</fullName>
        <formula>If((LEFT(OwnerId,3) = '005'),"User","Queue")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is the Case owned by a Queue?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Missed_bin_outcome__c</fullName>
        <description>Outcome of the missed bin report</description>
        <label>Missed bin outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Collected in time</fullName>
                </value>
                <value>
                    <fullName>Contents contaminated</fullName>
                </value>
                <value>
                    <fullName>Overfilled</fullName>
                </value>
                <value>
                    <fullName>Bin not present</fullName>
                </value>
                <value>
                    <fullName>Bin empty/not out on return</fullName>
                </value>
                <value>
                    <fullName>Contractor not yet been</fullName>
                </value>
                <value>
                    <fullName>No access</fullName>
                </value>
                <value>
                    <fullName>reported too late</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <description>A summary of what was done to resolve the case</description>
        <inlineHelpText>A summary of what was done to resolve the case</inlineHelpText>
        <label>Resolution</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Response_required_timescale__c</fullName>
        <description>The indicative timescale over which the case should be addressed</description>
        <inlineHelpText>The indicative timescale over which the case should be addressed</inlineHelpText>
        <label>Response required timescale</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Instant</fullName>
                    <default>true</default>
                    <label>Instant</label>
                </value>
                <value>
                    <fullName>Planned</fullName>
                </value>
                <value>
                    <fullName>Forward Plan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sodit_Owner_Name__c</fullName>
        <description>A temporary field to hold the name of the SODIT case owner.</description>
        <inlineHelpText>A temporary field to hold the name of the SODIT case owner.</inlineHelpText>
        <label>Sodit Owner Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X123FB_Form_Instance_Id__c</fullName>
        <description>This field is to store the unique Id from a 123FB submission</description>
        <inlineHelpText>This field is to store the unique Id from a 123FB submission</inlineHelpText>
        <label>123FB Form Instance Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>Cases_I_have_raised</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>arcuscrm__SYSTEM_Current_User_Is_Contact__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Cases I have raised</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>arcuscrm__Reported_by_Councillor__c</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>arcuscrm__All_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>arcuscrm__Date_Opened__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.STATUS</columns>
        <columns>FHDC_Priority_Coloured__c</columns>
        <columns>OWNER_NAME</columns>
        <columns>arcuscrm__Date_Closed__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Cases</label>
    </listViews>
    <listViews>
        <fullName>arcuscrm__All_Closed_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>arcuscrm__Date_Closed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>arcuscrm__All_Closed_Cases_Closed_in_Last_30_Days</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>arcuscrm__Date_Closed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>arcuscrm__Date_Closed__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>equals</operation>
            <value>Call logging</value>
        </filters>
        <label>All Cases Closed in Last 30 Days</label>
    </listViews>
    <listViews>
        <fullName>arcuscrm__All_On_Hold_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>arcuscrm__Date_Closed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>On Hold</value>
        </filters>
        <label>All On Hold Cases</label>
    </listViews>
    <listViews>
        <fullName>arcuscrm__All_Open_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>arcuscrm__Date_Closed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>arcuscrm__Date_Opened__c</field>
            <operation>equals</operation>
            <value>11/19/2019</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>arcuscrm__CRM_My_Closed_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>arcuscrm__Date_Closed__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>My Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>arcuscrm__Staff_Hub_Cases_I_have_raised_All</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>arcshared__Council_Service__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>arcuscrm__Date_Opened__c</columns>
        <columns>arcuscrm__Target_Resolution_Date__c</columns>
        <columns>arcuscrm__Date_Closed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>arcuscrm__SYSTEM_Current_Users_Contact_is_Customer__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Staff Hub - Cases I have raised (All)</label>
    </listViews>
    <listViews>
        <fullName>arcuscrm__Staff_Hub_Cases_I_have_raised_Closed</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>arcshared__Council_Service__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>arcuscrm__Date_Opened__c</columns>
        <columns>arcuscrm__Target_Resolution_Date__c</columns>
        <columns>arcuscrm__Date_Closed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>arcuscrm__SYSTEM_Current_Users_Contact_is_Customer__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Staff Hub - Cases I have raised (Closed)</label>
    </listViews>
    <listViews>
        <fullName>arcuscrm__Staff_Hub_Cases_I_have_raised_Open</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>arcshared__Council_Service__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>arcuscrm__Date_Opened__c</columns>
        <columns>arcuscrm__Target_Resolution_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>arcuscrm__SYSTEM_Current_Users_Contact_is_Customer__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Staff Hub - Cases I have raised (Open)</label>
    </listViews>
    <recordTypes>
        <fullName>Customer_Request</fullName>
        <active>true</active>
        <businessProcess>CRM Support Process</businessProcess>
        <description>A request made by an external customer eg a resident.</description>
        <label>Customer Request Old</label>
    </recordTypes>
    <recordTypes>
        <fullName>DSH_Profile_Update</fullName>
        <active>true</active>
        <businessProcess>DSH_CRM</businessProcess>
        <description>An update to any of the information on the profile-details page</description>
        <label>DSH_Profile_Update</label>
    </recordTypes>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <businessProcess>DSH_CRM</businessProcess>
        <description>A default Case RecordType (Required for Lightning DSH test classes).</description>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>External_Request</fullName>
        <active>true</active>
        <businessProcess>arcuscrm__Arcus CRM Default</businessProcess>
        <description>External requests raised via email to case</description>
        <label>External Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Street_Scene_Report</fullName>
        <active>true</active>
        <businessProcess>CRM Support Process</businessProcess>
        <description>A report relating to the local street scene eg potholes, dog fouling etc. Should have a location</description>
        <label>Street Scene Report Old</label>
    </recordTypes>
    <recordTypes>
        <fullName>Systems_Support</fullName>
        <active>true</active>
        <businessProcess>arcuscrm__Arcus CRM Default</businessProcess>
        <label>Systems Support</label>
    </recordTypes>
    <recordTypes>
        <fullName>arcuscrm__CRM_Customer_Feedback</fullName>
        <active>true</active>
        <businessProcess>arcuscrm__Arcus CRM Default</businessProcess>
        <description>Used for externally received complaints, comments or compliments. Will typically have a customer but can be anonymous.</description>
        <label>Customer Feedback</label>
    </recordTypes>
    <recordTypes>
        <fullName>arcuscrm__CRM_Customer_Request</fullName>
        <active>true</active>
        <businessProcess>arcuscrm__Arcus CRM Default</businessProcess>
        <description>The default record type for all requests from customers. Cases must always have a customer represented as a contact.</description>
        <label>Customer Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>arcuscrm__CRM_Document_Workflow_Case</fullName>
        <active>true</active>
        <businessProcess>arcuscrm__Arcus CRM Default</businessProcess>
        <description>A case that has been created from the indexing of one or more documents</description>
        <label>Document Workflow Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>arcuscrm__CRM_Internal_Request</fullName>
        <active>true</active>
        <businessProcess>arcuscrm__Arcus CRM Default</businessProcess>
        <description>The default record type for all internal requests. Cases must have been raised by / on behalf of a member of staff.</description>
        <label>Internal Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>arcuscrm__CRM_Shadow_Case</fullName>
        <active>true</active>
        <businessProcess>arcuscrm__Arcus CRM Default</businessProcess>
        <description>Shadow cases are used to integrate the CRM with the Arcus back office Reg Service and BE apps. They are always read only but when opened by a CRM user provide a summary of the back office record and a link to it.</description>
        <label>Shadow Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>arcuscrm__CRM_Street_Scene_Report</fullName>
        <active>true</active>
        <businessProcess>arcuscrm__Arcus CRM Default</businessProcess>
        <description>Used for externally or internally received reports of street scene related issues, for example graffiti reports. Cases should always have a type and a location (pin on map). They may be anonymous.</description>
        <label>Street Scene Report</label>
    </recordTypes>
    <validationRules>
        <fullName>CRM_Case_Required_Fields</fullName>
        <active>true</active>
        <description>CRM Case Required Fields from Trello Board:
Case subject and description are required fields when being edited by an FHDC Officer.</description>
        <errorConditionFormula>AND(
$Profile.Name = "FHDC Officer (CRM)",
OR(
ISBLANK( Subject ),
ISBLANK( Description )))</errorConditionFormula>
        <errorMessage>Case subject and description are required fields when being edited by an FHDC Officer.</errorMessage>
    </validationRules>
</CustomObject>